--- a/Assets/Input System/Game.Input.asmdef
+++ b/Assets/Input System/Game.Input.asmdef
@@ -1,10 +1,7 @@
 {
-    "name": "Game",
+    "name": "Game.Input",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:6546d7765b4165b40850b3667f981c26",
-        "GUID:0a4269ebfad8a6447a0715c7d1db66c9",
         "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
