--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ext.nunit": "2.0.5",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.inputsystem": "1.8.2",
     "com.unity.purchasing": "4.12.0",
     "com.unity.recorder": "5.1.3",
     "com.unity.render-pipelines.universal": "17.0.3",
