--- a/Assets/Scripts/Game.asmdef
+++ b/Assets/Scripts/Game.asmdef
@@ -5,7 +5,9 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:6546d7765b4165b40850b3667f981c26",
         "GUID:0a4269ebfad8a6447a0715c7d1db66c9",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
